# Common-Operators_CUDA

./: README.md
1.hellocuda/: 1.hellocuda.cu  CMakeLists.txt
10.gelu/: 10-1.gelu_FP16_1.cu  10-2.gelu_FP16_2.cu  10.gelu.py  CMakeLists.txt
11.fused_bias_mask_scale_and_add/: 11-1.fused_bias_mask_scale_and_add_fp32.cu  CMakeLists.txt
12.softmax/: CMakeLists.txt  softmax_v0.cu  softmax_v1.cu  softmax_v2.cu  softmax_v3.cu
13.measure_GPU_peak_perf/: 13-1.measure_GPU_peak_perf.cu  13-2.measure_GPU_peak_perf.cu  13.measure_GPU_peak_perf.cu
14.CUDAstream/: CMakeLists.txt
15.quantize/: 15-1.quantize_pertensor.cu  15-2.quantize_perchannel.cu  15.quantize.cu  CMakeLists.txt
16-1.GEMV(panda_teacher)/: 16.MatVec.cu  16.VecMat.cu  16_gemv.cuh  CMakeLists.txt
16-2.GEMV(my)/: CMakeLists.txt  MatVec.cu  VecMat.cu  gemv.cuh
17.Dropdout/: 17.dropout.cu  17.dropout.py  17.dropout_simplify  CMakeLists.txt
2.indexing/: 2.indexing.cu  CMakeLists.txt
3.vectorAdd/: 3-1.vectorAdd.cu  3-2.vectorized_vectorAdd.cu  CMakeLists.txt
4.device_quary/: 4.device_query.cu  CMakeLists.txt
5.reduce_kernel/: CMakeLists.txt  baseline.cu  reduce_v0.cu  reduce_v1.cu  reduce_v1_old.cu  reduce_v2.cu  reduce_v3.cu  reduce_v4.cu  reduce_v5.cu  reduce_v6.cu  reduce_v7.cu  reduce_v8.cu
8.histogram/: 8-1.histogram.cu  8-2.histogram.cu  CMakeLists.txt
9.copy_if/: 9.copy-if.cu  CMakeLists.txt
